# scaled-images-to-pdf

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: app.py  data_types.py  pdf_generator.py
src/templates/: error.html  upload.html
